// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CircleSlashes 1`] = `
<div>
  <svg
    class="bi bi-slash-circle"
    fill="currentColor"
    viewBox="0 0 16 16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"
    />
    <path
      d="M11.354 4.646a.5.5 0 0 0-.708 0l-6 6a.5.5 0 0 0 .708.708l6-6a.5.5 0 0 0 0-.708z"
    />
    <path
      d="m8.3537 3.6459c-0.19536-0.19586-0.51264-0.19586-0.708 0l-4 4c-0.472 0.472 0.236 1.18 0.708 0.708l4-4c0.19586-0.19536 0.19586-0.51264 0-0.708z"
    />
    <path
      d="m5.3537 2.6459c-0.19536-0.19586-0.51264-0.19586-0.708 0l-2 2c-0.472 0.472 0.236 1.18 0.708 0.708l2-2c0.19586-0.19536 0.19586-0.51264 0-0.708z"
    />
    <path
      d="m12.363 7.6459c-0.19536-0.19586-0.51264-0.19586-0.708 0l-4 4c-0.472 0.472 0.236 1.18 0.708 0.708l4-4c0.19586-0.19536 0.19586-0.51264 0-0.708z"
    />
    <path
      d="m13.363 10.646c-0.19536-0.19586-0.51264-0.19586-0.708 0l-2 2c-0.472 0.472 0.236 1.18 0.708 0.708l2-2c0.19586-0.19536 0.19586-0.51264 0-0.708z"
    />
  </svg>
</div>
`;

exports[`Cursor 1`] = `
<div>
  <svg
    fill="currentColor"
    viewBox="0 0 16 16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M14.082 2.182a.5.5 0 0 1 .103.557L8.528 15.467a.5.5 0 0 1-.917-.007L5.57 10.694.803 8.652a.5.5 0 0 1-.006-.916l12.728-5.657a.5.5 0 0 1 .556.103z"
    />
  </svg>
</div>
`;

exports[`Grid 1`] = `
<div>
  <svg
    fill="currentColor"
    viewBox="0 0 16 16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M1 2a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V2zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1V2zM1 7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V7zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1V7zM1 12a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1v-2zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1v-2zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v-2z"
    />
  </svg>
</div>
`;

exports[`LocationDot 1`] = `
<div>
  <svg
    viewBox="0 0 16 16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      stroke-width="0.26458"
    >
      <ellipse
        cx="8"
        cy="8"
        fill="#6498fa"
        rx="8"
        ry="8"
      />
      <ellipse
        cx="8"
        cy="8"
        fill="#fff"
        rx="6"
        ry="6"
      />
    </g>
  </svg>
</div>
`;

exports[`Pause 1`] = `
<div>
  <svg
    fill="#FFF"
    viewBox="0 0 16 16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5.5 3.5A1.5 1.5 0 0 1 7 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5zm5 0A1.5 1.5 0 0 1 12 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5z"
    />
  </svg>
</div>
`;

exports[`Play 1`] = `
<div>
  <svg
    fill="#FFF"
    viewBox="0 0 16 16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"
    />
  </svg>
</div>
`;
